# obsdn-python-sdk

./: .gitignore  Makefile  README.md  TESTING.md  pyproject.toml
docs/: testing.md
examples/: cancel_order.py  market_maker.py  place_order.py  ws_book.py  ws_private_orders.py
obsdn/: __init__.py  auth.py  client.py  env.py  error.py  types.py
obsdn/rest/: __init__.py  account.py  asset.py  auth_endpoints.py  base.py  chain.py  markets.py  orders.py  portfolio.py
obsdn/sign/: __init__.py  _encode.py  domain.py  order.py  register.py  scale.py  subaccount.py  transfer.py  vault.py  withdraw.py
obsdn/ws/: __init__.py  cache.py  channel.py  event.py  session.py
tests/: conftest.py  test_auth.py  test_e2e_staging.py  test_rest_staging.py  test_scale.py  test_sign.py  test_ws_staging.py
