[project]
name = "obsdn-sdk"
version = "0.1.0"
description = "Python SDK for the OBSDN perpetual exchange"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "OBSDN", email = "dev@obsdn.trade"}]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "eth-account>=0.13",
    "pydantic>=2.0",
    "websockets>=13.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.urls]
Documentation = "https://docs.obsdn.trade"

[tool.hatch.build.targets.wheel]
packages = ["obsdn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
